Begun write up on metzlerian model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
-        "Poincar\\'e"
+        "Poincar\\'e",
+        "metzler"
     ],
     "python.linting.pylintEnabled": true
 }
